src/core/c_api/itscam_sdk_c.h


typedef enum ITSCAM_ErrorCode {
    ITSCAM_OK = 0,
    ITSCAM_ERROR_CONNECTION_FAILED = 1,
    ITSCAM_ERROR_TIMEOUT = 2,
    ITSCAM_ERROR_NOT_AUTHENTICATED = 3,
    ITSCAM_ERROR_INVALID_PARAMETER = 4,
    ITSCAM_ERROR_SERVER_ERROR = 5,
    ITSCAM_ERROR_DISCONNECTED = 6,
    ITSCAM_ERROR_UNKNOWN = 7,
    ITSCAM_ERROR_NULL_HANDLE = 8,
    ITSCAM_ERROR_ALLOCATION_FAILED = 9
} ITSCAM_ErrorCode;
typedef struct ITSCAM_Client ITSCAM_Client;
typedef struct ITSCAM_CaptureResult ITSCAM_CaptureResult;
typedef struct ITSCAM_CaptureResultArray ITSCAM_CaptureResultArray;
typedef struct ITSCAM_ByteArray ITSCAM_ByteArray;
typedef struct ITSCAM_ProfileArray ITSCAM_ProfileArray;
typedef struct ITSCAM_FrameInfo {
    uint64_t requestId;
    uint64_t frameCount;
    int32_t  multiExpIndex;
    int32_t  multiExpLength;
    int32_t  shutter;
    float    gain;
    uint32_t width;          
    uint32_t height;         
    ITSCAM_Timestamp timestamp;
} ITSCAM_FrameInfo;
typedef struct ITSCAM_AutoReconnectConfig {
    int      enabled;       
    uint32_t intervalMs;    
    uint32_t maxRetries;    
} ITSCAM_AutoReconnectConfig;
typedef struct ITSCAM_EventSubscription {
    int pipeline;           
    int triggerMetadata;
    int triggerImage;
    int snapshotMetadata;
    int snapshotImage;
    int previewMetadata;
    int previewImage;
    int gpio;
    int serial1;
    int serial2;
} ITSCAM_EventSubscription;
typedef struct ITSCAM_CaptureSubscriptionConfig {
    int includeTrigger;     
    int includeSnapshot;
    int includeMetadata;
    int embedComments;
    int embedExif;
    int embedSignature;
    int triggerQuality;     
    int snapshotQuality;    
} ITSCAM_CaptureSubscriptionConfig;
typedef struct ITSCAM_SnapshotRequest {
    int reserved;           
} ITSCAM_SnapshotRequest;
typedef struct ITSCAM_ProfileInfo {
    uint32_t    id;
    const char* name;       
    const char* description;
    int         isActive;
} ITSCAM_ProfileInfo;
typedef void (*ITSCAM_CaptureCallback)(const ITSCAM_CaptureResult* result, 
                                        void* userData);
typedef void (*ITSCAM_DisconnectCallback)(const char* reason, void* userData);
typedef void (*ITSCAM_ConnectionStateCallback)(int state, const char* reason,
                                                void* userData);
typedef void (*ITSCAM_LogCallback)(int level, const char* message, void* userData);
ITSCAM_C_API ITSCAM_Client* ITSCAM_Client_create(void);
ITSCAM_C_API void ITSCAM_Client_destroy(ITSCAM_Client* client);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_connect(
    ITSCAM_Client* client,
    const char* address,
    uint16_t port,
    uint32_t timeoutMs,
    const ITSCAM_AutoReconnectConfig* reconnect);
ITSCAM_C_API void ITSCAM_Client_disconnect(ITSCAM_Client* client);
ITSCAM_C_API int ITSCAM_Client_isConnected(ITSCAM_Client* client);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_authenticate(
    ITSCAM_Client* client,
    const char* password,
    uint32_t timeoutMs);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_subscribe(
    ITSCAM_Client* client,
    const ITSCAM_EventSubscription* events,
    uint32_t timeoutMs);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_subscribeCaptures(
    ITSCAM_Client* client,
    const ITSCAM_CaptureSubscriptionConfig* config,
    uint32_t timeoutMs);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_captureSnapshot(
    ITSCAM_Client* client,
    const ITSCAM_SnapshotRequest* request,
    uint32_t timeoutMs,
    ITSCAM_CaptureResultArray** outResult);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_getLastFrame(
    ITSCAM_Client* client,
    int quality,
    uint32_t timeoutMs,
    ITSCAM_ByteArray** outJpeg);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_getActiveProfileId(
    ITSCAM_Client* client,
    uint32_t timeoutMs,
    uint32_t* outId);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_setActiveProfile(
    ITSCAM_Client* client,
    uint32_t profileId,
    uint32_t timeoutMs);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_listProfiles(
    ITSCAM_Client* client,
    uint32_t timeoutMs,
    ITSCAM_ProfileArray** outProfiles);
ITSCAM_C_API ITSCAM_ErrorCode ITSCAM_Client_reboot(
    ITSCAM_Client* client,
    uint32_t timeoutMs);
ITSCAM_C_API void ITSCAM_Client_onTriggerImage(
    ITSCAM_Client* client,
    ITSCAM_CaptureCallback callback,
    void* userData);
ITSCAM_C_API void ITSCAM_Client_onSnapshotImage(
    ITSCAM_Client* client,
    ITSCAM_CaptureCallback callback,
    void* userData);
ITSCAM_C_API void ITSCAM_Client_onDisconnect(
    ITSCAM_Client* client,
    ITSCAM_DisconnectCallback callback,
    void* userData);
ITSCAM_C_API void ITSCAM_Client_onConnectionState(
    ITSCAM_Client* client,
    ITSCAM_ConnectionStateCallback callback,
    void* userData);
ITSCAM_C_API void ITSCAM_Client_onLog(
    ITSCAM_Client* client,
    ITSCAM_LogCallback callback,
    void* userData);
ITSCAM_C_API size_t ITSCAM_CaptureResultArray_size(
    const ITSCAM_CaptureResultArray* array);
ITSCAM_C_API const ITSCAM_CaptureResult* ITSCAM_CaptureResultArray_get(
    const ITSCAM_CaptureResultArray* array,
    size_t index);
ITSCAM_C_API void ITSCAM_CaptureResultArray_destroy(
    ITSCAM_CaptureResultArray* array);
ITSCAM_C_API ITSCAM_FrameInfo ITSCAM_CaptureResult_getInfo(
    const ITSCAM_CaptureResult* result);
ITSCAM_C_API const uint8_t* ITSCAM_CaptureResult_getJpeg(
    const ITSCAM_CaptureResult* result,
    size_t* outSize);
ITSCAM_C_API size_t ITSCAM_CaptureResult_getPlateCount(
    const ITSCAM_CaptureResult* result);
ITSCAM_C_API const char* ITSCAM_CaptureResult_getPlate(
    const ITSCAM_CaptureResult* result,
    size_t index);
ITSCAM_C_API size_t ITSCAM_ByteArray_size(const ITSCAM_ByteArray* array);
ITSCAM_C_API const uint8_t* ITSCAM_ByteArray_data(const ITSCAM_ByteArray* array);
ITSCAM_C_API void ITSCAM_ByteArray_destroy(ITSCAM_ByteArray* array);
ITSCAM_C_API size_t ITSCAM_ProfileArray_size(const ITSCAM_ProfileArray* array);
ITSCAM_C_API int ITSCAM_ProfileArray_get(
    const ITSCAM_ProfileArray* array,
    size_t index,
    ITSCAM_ProfileInfo* outInfo);
ITSCAM_C_API void ITSCAM_ProfileArray_destroy(ITSCAM_ProfileArray* array);