src/wrappers/csharp/Itscam.Sdk/Native/NativeMethods.cs

// SPDX-License-Identifier: Proprietary
// Copyright (c) 2026 Pumatronix
//
// P/Invoke surface for the ITSCAM SDK native library (libitscam_sdk.so
// or itscam_sdk.dll).  This file mirrors the C API headers in
// core/c_api/*.h.  All strings are marshalled as UTF-8.

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace Pumatronix.Itscam.Native
{
    /// <summary>
    /// Native error codes returned by every ITSCAM_*_* function.
    /// Mirrors ITSCAM_ErrorCode in itscam_sdk_c.h.
    /// </summary>
    internal enum NativeErrorCode
    {
        Ok = 0,
        ConnectionFailed = 1,
        Timeout = 2,
        NotAuthenticated = 3,
        InvalidParameter = 4,
        ServerError = 5,
        Disconnected = 6,
        Unknown = 7,
        NullHandle = 8,
        AllocationFailed = 9,
    }

    /// <summary>P/Invoke wrappers.</summary>
    internal static class NativeMethods
    {
        /// <summary>
        /// Name of the native library.  .NET probes for
        /// libitscam_sdk.so on Linux and itscam_sdk.dll on Windows
        /// automatically.  When consumers install the NuGet package the
        /// runtime-specific binary is copied next to their executable
        /// by Itscam.Sdk.targets.
        /// </summary>
        internal const string Lib = "itscam_sdk";

        // ====================================================================
        //  Binary client (ITSCAM_Client)
        // ====================================================================

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_create",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr ItscamClient_create();

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_destroy(IntPtr client);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_connect",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode ItscamClient_connect(
            IntPtr client,
            [MarshalAs(UnmanagedType.LPStr)] string host,
            ushort port,
            uint timeoutMs,
            IntPtr reconnect);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_disconnect",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_disconnect(IntPtr client);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_isConnected",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ItscamClient_isConnected(IntPtr client);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_authenticate",
                   CallingConvention = CallingConvention.Cdecl,
                   CharSet = CharSet.Ansi, BestFitMapping = false)]
        internal static extern NativeErrorCode ItscamClient_authenticate(
            IntPtr client,
            [MarshalAs(UnmanagedType.LPStr)] string password,
            uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_subscribe",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_subscribe(
            IntPtr client,
            ref NativeEventSubscription events,
            uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_subscribeCaptures",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_subscribeCaptures(
            IntPtr client,
            ref NativeCaptureSubscriptionConfig config,
            uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_captureSnapshot",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_captureSnapshot(
            IntPtr client,
            ref NativeBinarySnapshotRequest request,
            uint timeoutMs,
            out IntPtr outResults);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_getLastFrame",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_getLastFrame(
            IntPtr client,
            int quality,
            uint timeoutMs,
            out IntPtr outJpeg);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_getActiveProfileId",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_getActiveProfileId(
            IntPtr client,
            uint timeoutMs,
            out uint outId);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_setActiveProfile",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_setActiveProfile(
            IntPtr client,
            uint profileId,
            uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_listProfiles",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_listProfiles(
            IntPtr client,
            uint timeoutMs,
            out IntPtr outProfiles);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_reboot",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeErrorCode ItscamClient_reboot(
            IntPtr client,
            uint timeoutMs);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_onTriggerImage",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_onTriggerImage(
            IntPtr client,
            NativeCaptureCallback callback,
            IntPtr userData);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_onSnapshotImage",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_onSnapshotImage(
            IntPtr client,
            NativeCaptureCallback callback,
            IntPtr userData);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_onDisconnect",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_onDisconnect(
            IntPtr client,
            NativeDisconnectCallback callback,
            IntPtr userData);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_onConnectionState",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_onConnectionState(
            IntPtr client,
            NativeConnectionStateCallback callback,
            IntPtr userData);

        [DllImport(Lib, EntryPoint = "ITSCAM_Client_onLog",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ItscamClient_onLog(
            IntPtr client,
            NativeLogCallback callback,
            IntPtr userData);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResultArray_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr CaptureResultArray_size(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResultArray_get",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CaptureResultArray_get(
            IntPtr array, UIntPtr index);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResultArray_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void CaptureResultArray_destroy(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResult_getInfo",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern NativeFrameInfo CaptureResult_getInfo(
            IntPtr result);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResult_getJpeg",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CaptureResult_getJpeg(
            IntPtr result, out UIntPtr outSize);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResult_getPlateCount",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr CaptureResult_getPlateCount(IntPtr result);

        [DllImport(Lib, EntryPoint = "ITSCAM_CaptureResult_getPlate",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr CaptureResult_getPlate(
            IntPtr result, UIntPtr index);

        [DllImport(Lib, EntryPoint = "ITSCAM_ByteArray_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr ByteArray_size(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_ByteArray_data",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr ByteArray_data(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_ByteArray_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ByteArray_destroy(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_ProfileArray_size",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern UIntPtr ProfileArray_size(IntPtr array);

        [DllImport(Lib, EntryPoint = "ITSCAM_ProfileArray_get",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ProfileArray_get(
            IntPtr array, UIntPtr index, out NativeProfileInfo outInfo);

        [DllImport(Lib, EntryPoint = "ITSCAM_ProfileArray_destroy",
                   CallingConvention = CallingConvention.Cdecl)]
        internal static extern void ProfileArray_destroy(IntPtr array);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void NativeCaptureCallback(IntPtr result, IntPtr userData);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void NativeDisconnectCallback(IntPtr reason, IntPtr userData);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void NativeConnectionStateCallback(
            int state, IntPtr reason, IntPtr userData);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void NativeLogCallback(
            int level, IntPtr message, IntPtr userData);

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeAutoReconnectConfig
        {
            public int Enabled;
            public uint IntervalMs;
            public uint MaxRetries;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeEventSubscription
        {
            public int Pipeline;
            public int TriggerMetadata;
            public int TriggerImage;
            public int SnapshotMetadata;
            public int SnapshotImage;
            public int PreviewMetadata;
            public int PreviewImage;
            public int Gpio;
            public int Serial1;
            public int Serial2;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeCaptureSubscriptionConfig
        {
            public int IncludeTrigger;
            public int IncludeSnapshot;
            public int IncludeMetadata;
            public int EmbedComments;
            public int EmbedExif;
            public int EmbedSignature;
            public int TriggerQuality;
            public int SnapshotQuality;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct NativeBinarySnapshotRequest
        {
            public int Reserved;
        }
